[package]
name                 = "biome_turtle_formatter"
version              = "0.0.1"
authors.workspace    = true
edition.workspace    = true
description          = "Biome's Turtle (RDF) formatter"
homepage.workspace   = true
repository.workspace = true
license.workspace    = true
keywords.workspace   = true
categories.workspace = true
publish              = true

# cargo-workspaces metadata
[package.metadata.workspaces]
independent = true

[dependencies]
biome_configuration = { path = "../biome_configuration" }
biome_diagnostics   = { workspace = true }
biome_formatter     = { workspace = true }
biome_turtle_syntax = { workspace = true }
biome_rowan         = { workspace = true }
biome_suppression   = { workspace = true }

[dev-dependencies]
biome_formatter_test = { path = "../biome_formatter_test" }
biome_fs             = { path = "../biome_fs" }
biome_parser         = { path = "../biome_parser" }
biome_service        = { path = "../biome_service" }
biome_test_utils     = { path = "../biome_test_utils" }
biome_turtle_parser  = { path = "../biome_turtle_parser" }
camino               = { workspace = true }
tests_macros         = { path = "../tests_macros" }

[lints]
workspace = true
