[package]
name                 = "biome_yaml_analyze"
version              = "0.0.1"
authors.workspace    = true
edition.workspace    = true
description          = "Biome's YAML linter"
homepage.workspace   = true
repository.workspace = true
license.workspace    = true
keywords.workspace   = true
categories.workspace = true
publish              = false

[dependencies]
biome_analyze        = { workspace = true }
biome_analyze_macros = { workspace = true }
biome_console        = { workspace = true }
biome_deserialize    = { workspace = true }
biome_deserialize_macros = { workspace = true }
biome_diagnostics    = { workspace = true }
biome_yaml_semantic  = { workspace = true }
biome_yaml_syntax    = { workspace = true }
biome_rowan          = { workspace = true }
biome_rule_options   = { workspace = true }
biome_string_case    = { workspace = true }
biome_suppression    = { workspace = true }
rustc-hash           = { workspace = true }
schemars             = { workspace = true, optional = true }
serde                = { workspace = true, features = ["derive"] }

[build-dependencies]
filetime = { workspace = true }

[dev-dependencies]
biome_yaml_parser    = { workspace = true }
biome_test_utils     = { workspace = true }
camino               = { workspace = true }
insta                = { workspace = true }
tests_macros         = { workspace = true }

[features]
schema = ["schemars"]

[lints]
workspace = true
