[package]
name                 = "biome_yaml_analyze"
version              = "0.0.1"
authors.workspace    = true
edition.workspace    = true
description          = "Biome's YAML linter"
homepage.workspace   = true
repository.workspace = true
license.workspace    = true
keywords.workspace   = true
categories.workspace = true
publish              = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biome_analyze        = { workspace = true }
biome_analyze_macros = { workspace = true }
biome_console        = { workspace = true }
biome_diagnostics    = { workspace = true }
biome_rowan          = { workspace = true }
biome_suppression    = { workspace = true }
biome_yaml_syntax    = { workspace = true }
rustc-hash           = { workspace = true }

[dev-dependencies]
biome_yaml_parser = { path = "../biome_yaml_parser" }
biome_test_utils  = { path = "../biome_test_utils" }
insta             = { workspace = true, features = ["glob"] }
tests_macros      = { path = "../tests_macros" }

[build-dependencies]
filetime = { workspace = true }

[lints]
workspace = true
