[package]
name        = "biome_yaml_formatter"
version     = "0.0.1"
authors.workspace    = true
edition.workspace    = true
description = "Biome's YAML formatter"
homepage.workspace   = true
repository.workspace = true
license.workspace    = true
keywords.workspace   = true
categories.workspace = true
publish     = false

[[bench]]
harness = false
name    = "yaml_formatter"

[dependencies]
biome_deserialize        = { workspace = true }
biome_deserialize_macros = { workspace = true }
biome_diagnostics        = { workspace = true }
biome_formatter          = { workspace = true }
biome_yaml_syntax        = { workspace = true }
biome_rowan              = { workspace = true }
biome_suppression        = { workspace = true }
camino                   = { workspace = true }

[dev-dependencies]
biome_formatter      = { workspace = true, features = ["countme"] }
biome_formatter_test = { path = "../biome_formatter_test" }
biome_fs             = { path = "../biome_fs" }
biome_yaml_parser    = { path = "../biome_yaml_parser" }
biome_parser         = { path = "../biome_parser" }
biome_service        = { path = "../biome_service" }
biome_test_utils     = { path = "../biome_test_utils" }
criterion            = { package = "codspeed-criterion-compat", version = "=3.0.5" }
serde                = { workspace = true, features = ["derive"] }
serde_json           = { workspace = true }
tests_macros         = { path = "../tests_macros" }

[target.'cfg(all(target_family="unix", not(all(target_arch = "aarch64", target_env = "musl"))))'.dev-dependencies]
tikv-jemallocator = { workspace = true }

[target.'cfg(target_os = "windows")'.dev-dependencies]
mimalloc = { workspace = true }

[lints]
workspace = true
