[package]
name                 = "biome_yaml_formatter"
version              = "0.0.1"
authors.workspace    = true
edition.workspace    = true
description          = "Biome's YAML formatter"
homepage.workspace   = true
repository.workspace = true
license.workspace    = true
keywords.workspace   = true
categories.workspace = true
publish              = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biome_deserialize        = { workspace = true }
biome_deserialize_macros = { workspace = true }
biome_diagnostics        = { workspace = true }
biome_formatter          = { workspace = true }
biome_rowan              = { workspace = true }
biome_suppression        = { workspace = true }
biome_yaml_syntax        = { workspace = true }
camino                   = { workspace = true }
schemars                 = { workspace = true, optional = true }
serde                    = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
biome_formatter      = { workspace = true, features = ["countme"] }
biome_formatter_test = { path = "../biome_formatter_test" }
biome_fs             = { path = "../biome_fs" }
biome_yaml_parser    = { path = "../biome_yaml_parser" }
biome_parser         = { path = "../biome_parser" }
biome_service        = { path = "../biome_service" }
biome_test_utils     = { path = "../biome_test_utils" }
countme              = { workspace = true, features = ["enable"] }
serde_json           = { workspace = true }
tests_macros         = { path = "../tests_macros" }

[features]
schema = ["dep:schemars", "serde"]
serde  = ["dep:serde"]

[lints]
workspace = true
