[package]
name                 = "biome_yaml_parser"
version              = "0.0.1"
authors.workspace    = true
edition.workspace    = true
description          = "Biome's YAML parser"
homepage.workspace   = true
repository.workspace = true
license.workspace    = true
keywords.workspace   = true
categories.workspace = true
publish              = false

[[bench]]
harness = false
name    = "yaml_parser"

[dependencies]
biome_console       = { workspace = true }
biome_diagnostics   = { workspace = true }
biome_parser        = { workspace = true }
biome_rowan         = { workspace = true }
biome_unicode_table = { workspace = true }
biome_yaml_factory  = { workspace = true }
biome_yaml_syntax   = { workspace = true }
tracing             = { workspace = true }

[dev-dependencies]
biome_test_utils  = { workspace = true }
criterion         = { package = "codspeed-criterion-compat", version = "=3.0.5" }
insta             = { workspace = true }
quickcheck        = { workspace = true }
quickcheck_macros = { workspace = true }
tests_macros      = { workspace = true }

[target.'cfg(all(target_family="unix", not(all(target_arch = "aarch64", target_env = "musl"))))'.dev-dependencies]
tikv-jemallocator = { workspace = true }

[target.'cfg(target_os = "windows")'.dev-dependencies]
mimalloc = { workspace = true }

[lints]
workspace = true
